--- a/src/assets/new_spain/index.html
+++ b/src/assets/new_spain/index.html
@@ -521,6 +521,86 @@ footer .items {
   font-size: 12px;
   font-weight: 400;
 }
+.sites .items {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 0;
+}
+
+.sites .item {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background: #fff;
+  color: #000;
+  border-radius: 10px;
+  padding: 10px 20px;
+  box-shadow: 0 0 5px rgba(0,0,0,0.1);
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.sites .item .table {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.sites .item .tr {
+  border: none !important;
+  flex: 1;
+  text-align: center;
+}
+
+.sites .item .logo_img {
+  max-height: 60px;
+  object-fit: contain;
+  width: auto;
+}
+
+.sites .item .stars img {
+  width: 16px;
+  height: 16px;
+}
+
+.sites .item .rating_pc p {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+}
+
+.sites .item .votes {
+  font-size: 12px;
+  color: #444;
+  margin-top: 5px;
+}
+
+.sites .item .btnactive {
+  background: #6bbf42;
+  color: white;
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 5px;
+  display: inline-block;
+  text-align: center;
+  font-size: 14px;
+}
+
+.label-hot {
+  background-color: #184F90;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 4px 10px;
+  border-radius: 4px;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
 
     </style>
     <!-- Preload critical CSS -->
